@@ -1,10 +1,10 @@
 package br.com.connectfy.EurofarmaCliente.services;
 
 import br.com.connectfy.EurofarmaCliente.dtos.InstructorDTO;
-import br.com.connectfy.EurofarmaCliente.dtos.InstructorTrainingsDTO;
+import br.com.connectfy.EurofarmaCliente.dtos.InstructorNameAndIdDTO;
+
 import br.com.connectfy.EurofarmaCliente.dtos.TrainingHistoricDTO;
 import br.com.connectfy.EurofarmaCliente.exceptions.ResourceNotFoundException;
-import br.com.connectfy.EurofarmaCliente.models.Employee;
 import br.com.connectfy.EurofarmaCliente.models.Instructor;
 import br.com.connectfy.EurofarmaCliente.repositories.InstructorRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,8 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -34,44 +32,27 @@ public class InstructorService {
     public InstructorDTO getById(Long id) {
         Instructor instructor = instructorRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("No records found with id: " + id));
-//
-//        List<String> instructorNames = instructor.getTrainnings().stream()
-//                .flatMap(training -> training.getInstructors().stream())
-//                .map(trainingInstructor -> trainingInstructor.getEmployee().getName()).distinct().collect(Collectors.toList());
+
 
         return new InstructorDTO(
                 instructor.getId(),
                 instructor.getEmployee(),
-                instructor.getTrainnings(),
-                null
+                instructor.getTrainnings()
         );
     }
     @Transactional(readOnly = true)
-    public List<InstructorDTO> findAll() {
+    public List<InstructorNameAndIdDTO> findAll() {
         List<Instructor> instructors = instructorRepository.findAll();
 
         return instructors.stream()
-                .map(instructor -> {
-                    List<String> instructorNames = instructor.getTrainnings().stream()
-                            .flatMap(training -> training.getInstructors().stream())
-                            .map(trainingInstructor -> {
-                                Employee employee = trainingInstructor.getEmployee();
-                                return employee != null ? employee.getName() : null;
-                            })
-                            .filter(Objects::nonNull)
-                            .distinct()
-                            .collect(Collectors.toList());
-
-                    Employee instructorEmployee = instructor.getEmployee();
-                    return new InstructorDTO(
-                            instructor.getId(),
-                            instructorEmployee,
-                            instructor.getTrainnings(),
-                            instructorNames
-                    );
-                })
+                .map(instructor -> new InstructorNameAndIdDTO(
+                        instructor.getId(),
+                        instructor.getEmployee().getName(),
+                        instructor.getEmployee().getSurname(),
+                        instructor.getEmployee().getName()+" "+ instructor.getEmployee().getSurname()))
                 .collect(Collectors.toList());
     }
+
     @Transactional
     public ResponseEntity<String> update(Long id, InstructorDTO instructorDTO) {
         Instructor updateInstructor = instructorRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("No records found with id: " + id));
@@ -107,13 +88,8 @@ public class InstructorService {
 
         return instructor.getTrainnings().stream()
                 .map(training -> {
-                    List<String> instructorNames = training.getInstructors().stream()
-                            .map(trainingInstructor -> {
-                                Employee employee = trainingInstructor.getEmployee();
-                                return employee != null ? employee.getName() : "Desconhecido";
-                            })
-                            .distinct().collect(Collectors.toList());
-
+                    List<InstructorNameAndIdDTO> instructorNames = training.getInstructors().stream()
+                            .map(trainingInstructor -> new InstructorNameAndIdDTO(trainingInstructor.getId(),trainingInstructor.getEmployee().getName(),trainingInstructor.getEmployee().getSurname(),trainingInstructor.getEmployee().getName()+" "+ trainingInstructor.getEmployee().getSurname())).toList();
                     return new TrainingHistoricDTO(
                             training.getId(),
                             training.getName(),
